lang.java.statics.test/tests/packages/unqualified-reference-to-missing-class.no.spt
module packages/unqualified-reference-to-missing-class_no

language metaborg-java

test unqualified-reference-to-missing-class [[

test;



// error: cannot find symbol

[p] {

    [A]
    package p;
    public class A {
        public B b;
    }

}

]] analysis fails
   run javacFails to ""
